# Simple-Calculator-Function

./: Cargo.toml  Dockerfile  README.md  func.yaml
src/: main.rs
