[package]
name = "simple-calc"
version = "0.1.0"
authors = ["metamemelord"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
fdk = { git = "https://github.com/metamemelord/fdk-rust" }
